--- a/style.css
+++ b/style.css
@@ -1,15 +1,28 @@
-body {
-  font-family: 'Roboto', sans-serif;
-  background-color: #111111;
-  color: #ffffff;
-  line-height: 1.6;
+/* Variables de color */
+:root {
+  --primary-bg: #111111;
+  --secondary-bg: #222222;
+  --tertiary-bg: #333333;
+  --text-color: #ffffff;
+  --link-color: #4c86b8;
+  --accent-color: #ff7f00;
 }
 
+/* Estilos generales */
+body {
+  font-family: 'Roboto', sans-serif;
+  background-color: var(--primary-bg);
+  color: var(--text-color);
+  line-height: 1.6;
+  margin: 20px; /* Margen exterior para separar del borde de la ventana */
+}
+
+/* Encabezado */
 header {
   text-align: center;
   padding: 30px 0;
-  background-color: #333333;
-  color: #ffffff;
+  background-color: var(--tertiary-bg);
+  color: var(--text-color);
 }
 
 h1 {
@@ -27,10 +40,22 @@ p {
   margin: 0;
 }
 
+/* Enlaces */
+a {
+  color: var(--link-color);
+  text-decoration: none;
+  transition: color 0.3s ease;
+}
+
+a:hover {
+  color: var(--accent-color);
+}
+
+/* Secciones */
 .section {
   margin-bottom: 30px;
   padding: 20px;
-  background-color: #222222;
+  background-color: var(--secondary-bg);
   box-shadow: 0 0 10px rgba(255, 255, 255, 0.1);
   border-radius: 5px;
   transition: transform 0.3s ease, box-shadow 0.3s ease;
@@ -42,7 +67,7 @@ p {
 
 .section h2 {
   font-size: 20px;
-  color: #ffffff;
+  color: var(--text-color);
   margin-bottom: 15px;
 }
 
@@ -60,6 +85,8 @@ p {
   color: #aaaaaa;
   font-size: 14px;
 }
+
+/* Experiencia */
 .experience {
   margin-bottom: 30px;
 }
@@ -68,7 +95,7 @@ p {
   text-align: center;
   font-size: 24px;
   margin-bottom: 10px;
-  color: #ffffff;
+  color: var(--text-color);
 }
 
 .experience ul {
@@ -80,7 +107,7 @@ p {
 .experience li {
   margin-bottom: 20px;
   padding: 20px;
-  background-color: #222222;
+  background-color: var(--secondary-bg);
   box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
   border-radius: 5px;
   transition: transform 0.3s ease, box-shadow 0.3s ease;
@@ -96,7 +123,7 @@ p {
   margin: 0;
   font-size: 18px;
   margin-bottom: 10px;
-  color: #ffffff;
+  color: var(--text-color);
 }
 
 .experience li p.details {
@@ -111,6 +138,7 @@ p {
   color: #aaaaaa;
 }
 
+/* Habilidades */
 .skills {
   margin-bottom: 30px;
 }
@@ -127,7 +155,7 @@ p {
   margin-right: 15px;
   margin-bottom: 10px;
   padding: 5px 10px;
-  background-color: #4c86b8;
+  background-color: var(--link-color);
   border-radius: 20px;
   font-size: 14px;
   transition: transform 0.3s ease, box-shadow 0.3s ease;
@@ -139,15 +167,16 @@ p {
   box-shadow: 0 2px 5px rgba(0, 0, 0, 0.2);
 }
 
+/* Proyectos */
 .projects {
   margin-bottom: 30px;
 }
 
 .projects .project {
-  position: relative; /* Agrega posición relativa para que los elementos hijos sean posicionados en relación a este */
+  position: relative;
   margin-bottom: 20px;
   padding: 20px;
-  background-color: #222222;
+  background-color: var(--secondary-bg);
   box-shadow: 0 0 10px rgba(255, 255, 255, 0.1);
   border-radius: 5px;
   transition: transform 0.3s ease, box-shadow 0.3s ease;
@@ -155,18 +184,19 @@ p {
 }
 
 .projects .project img {
-  position: relative; /* Agrega posición relativa para que el z-index funcione */
+  position: relative;
   width: 250px;
   height: auto;
   border-radius: 5px;
   margin-bottom: 10px;
-  z-index: 1; /* Coloca la imagen detrás del enlace */
+  z-index: 1;
 }
 
 .projects .project a {
-  position: relative; /* Agrega posición relativa para que el z-index funcione */
-  z-index: 1; /* Coloca el enlace en primer plano */
+  position: relative;
+  z-index: 1;
 }
+
 .projects .project:hover {
   transform: translateY(-5px);
   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
@@ -176,7 +206,7 @@ p {
   margin: 0;
   font-size: 20px;
   margin-bottom: 10px;
-  color: #ffffff;
+  color: var(--text-color);
 }
 
 .projects .project p {
@@ -184,12 +214,14 @@ p {
   font-size: 16px;
   color: #cccccc;
   line-height: 1.4;
-  }
+}
+
+/* Botón GitHub */
 .github-button {
   display: block;
   margin-top: 10px;
   padding: 10px 20px;
-  background-color: #4c86b8;
+  background-color: var(--link-color);
   color: #ffffff;
   border: none;
   border-radius: 5px;
@@ -212,6 +244,8 @@ p {
   85% { background-color: #ff00ff; }
   100% { background-color: #ff0000; }
 }
+
+/* Foto de perfil */
 .photo {
   text-align: center;
   margin-bottom: 50px;
@@ -221,18 +255,20 @@ p {
 .photo img {
   display: block;
   margin: 0 auto;
-  width: 250px;
-  height: 250px;
-  border-radius: 50%;
+  width: 300px;
+  height: 300px;
+  border-radius: 50%; /* Cambiamos el border-radius para que sea circular */
   box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
-  transition: transform 0.3s ease, box-shadow 0.3s ease;
+  transition: transform 0.3s ease, box-shadow 0.3s ease, filter 0.3s ease; /* Agregamos efecto de filtro */
 }
 
 .photo img:hover {
-  transform: rotate(360deg);
-  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+  transform: scale(1.05) translateY(-5px); /* Escalamos ligeramente y movemos hacia arriba */
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.3); /* Incrementamos la sombra en el hover */
 }
 
+
+/* Certificados */
 .certificates {
   margin-bottom: 30px;
 }
@@ -266,6 +302,7 @@ p {
   box-shadow: 0 2px 5px rgba(0, 0, 0, 0.2);
 }
 
+/* Redes sociales */
 .social-media {
   margin-bottom: 30px;
 }
